# property-analysis-ai-agent

./: .editorconfig  .env.example  .gitignore  Makefile  README.md
.github/workflows/: ci.yml
client/: vite.config.ts
client/src/: App.tsx
client/src/features/PropertyAnalysis/: AnalysisForm.tsx  AnalysisProgress.tsx  ChartView.tsx  PropertyAnalysis.css  PropertyAnalysis.tsx  ResearchNote.tsx  ReviewActions.tsx  TraceTimeline.tsx
client/src/features/PropertyAnalysis/apis/: api.ts
client/src/features/PropertyAnalysis/types/: types.ts
client/src/hooks/: useAnalysis.ts  useSSE.ts
server/: README.md  main.py  pyproject.toml
server/api/: __init__.py
server/api/admin/: __init__.py  routes.py
server/api/properties/: __init__.py  data_sources.py  events.py  routes.py  schemas.py  service.py  skills_loader.py  store.py
server/api/properties/prompts/: evaluate_prompt.py  plan_prompt.py  synthesis_prompt.py
server/api/properties/skills/: price_paid_transactions.yaml  regional_hpi.yaml  sparql_query.yaml  top_streets.yaml
server/core/: config.py  deep_agent.py  exceptions.py  llm_cache.py  llm_factory.py  logging.py
server/mcp_server/: server.py
server/server/data/: analyses.json
server/tests/: conftest.py  testconfig.py
server/tests/admin/: __init__.py  test_admin_api.py
server/tests/properties/: test_api.py
