[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "1.0.0"
description = "FastAPI backend for property analysis, featuring AI-powered analysis via DeepAgent with a human-in-the-loop review workflow."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "pip-system-certs>=5.3",
    "truststore>=0.10.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "uvicorn>=0.48.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server", "server.*"]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-exclude = [
    ".venv",
    "venv",
    "env",
    "__pycache__",
    ".eggs",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PT", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101"]
"api/properties/prompts/*.py" = ["E501"]
"core/config.py" = ["S104"]
"core/exceptions.py" = ["N818", "ARG001"]
