[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "1.0.0"
description = "FastAPI backend for property analysis, featuring AI-powered analysis via DeepAgent with a human-in-the-loop review workflow."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "pip-system-certs>=5.3",
    "truststore>=0.10.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "uvicorn>=0.48.0",
    "mcp>=1.27.1",
    "redis>=8.0.0",
    "langchain-community>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server", "server.*"]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-exclude = [
    ".venv",
    "venv",
    "env",
    "__pycache__",
    ".eggs",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PT", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101"]
"api/properties/prompts/*.py" = ["E501"]
"core/config.py" = ["S104"]
"core/exceptions.py" = ["N818", "ARG001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["server"]
omit = [
    "server/tests/*",
    "server/.venv/*",
    "server/server/data/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "except ImportError",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "server.tests.*",
]
ignore_errors = true

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
